--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-data/. filter=lfs diff=lfs merge=lfs -text
+data/scraper-shmu-observations.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
